--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 Casual Lib is a library package used to support the Casual porcelains. 
 
 * Requirements
-Casual Lib requires Emacs 29.3+.
+Casual Lib requires Emacs 29.3+ and Transient 0.6.0+.
 
 Casual Lib has been verified with the following configuration. 
 - Emacs 29.3 (macOS 14.5, Ubuntu Linux 22.04.4 LTS)
