--- a/README.org
+++ b/README.org
@@ -1,4 +1,10 @@
-[[https://melpa.org/#/casual-lib][file:https://melpa.org/packages/casual-lib-badge.svg]]
+* NOTICE
+
+This package has been superseded by the package [[https://github.com/kickingvegas/casual][casual]]. Please install the package ~casual~ from either [[https://melpa.org/#/casual][MELPA]] or [[https://stable.melpa.org/#/casual][MELPA stable]].
+
+Upon installation and upgrade of ~casual~, this package will be uninstalled from your Emacs configuration. 
+
+This repository should be treated as an archive. All future development on Casual Lib will be done in the [[https://github.com/kickingvegas/casual][Casual repository]].
 
 * Casual Lib
 Casual Lib is a library package used to support the Casual suite of user interfaces. 
